--- a/1-vue-js-ornek.html
+++ b/1-vue-js-ornek.html
@@ -1,26 +1,32 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <title>vue-1</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <div id="app">
-        <h1>{{ title }}</h1>
-        <button>{{ buttonTitle }}</button>
-
+      <h1>{{ title }}</h1>
+      <button>{{ buttonTitle }}</button>
+      <p>{{parag}}</p>
+      <!-- <a href="{{link}}">videosinif</a> -->
+      <!-- attribute içinde {{xxx}} şeklinde kullanılamaz aşağıdaki şekilde
+        v-bind:href="link"
+        burada dediğimiz şey href i vue ile kontrol etmek istiyorum, bunu birleştir diyoruz-->
+      <a v-bind:href="link">videosinif</a>
     </div>
 
     <script>
-        new Vue({
-            el : "#app",
-            data :{
-                title : "test başlık",
-                buttonTitle : "tıkla gelsin..."
-            }
-        })
+      new Vue({
+        el: "#app",
+        data: {
+          title: "test başlık",
+          buttonTitle: "tıkla gelsin...",
+          parag: "lorem ipsum dolor sit amet...",
+          link: "https://www.videosinif.com",
+        },
+      });
     </script>
-</body>
+  </body>
 </html>
